Upgrade java 17 and dependencies